tests/NormalTests/paczka1/small_fuzzy/79737443.err
Error in line 4: Mwx S977 22,9
Error in line 7: CyeodG S977 28,9
